# smallstack

./: README.md  STANDARDS.md  docker-compose.yml  publish.sh
.cargo/: config.toml
crates/demo/: Cargo.toml  Dockerfile
crates/demo/public/: index.html
crates/demo/src/: main.rs
crates/demo/tests/: integration.rs
crates/mini-err/: Cargo.toml  README.md
crates/mini-err/src/: error.rs  lib.rs  result.rs  ser.rs
crates/mini-err/tests/: serde.rs  variants.rs
crates/mini-log/: Cargo.toml  README.md
crates/mini-log/src/: entry.rs  format.rs  lib.rs  logger.rs
crates/mini-log/tests/: clone.rs  err_integration.rs  filtering.rs  from_env.rs  json.rs  output.rs  sanitize.rs
crates/mini-search/: Cargo.toml  README.md
crates/mini-search/src/: bounds.rs  document.rs  engine.rs  error.rs  fields.rs  lib.rs  numkey.rs  persist.rs  processor.rs  query.rs  score.rs  tokenizer.rs  wasm.rs
crates/mini-search/src/index/: exact.rs  inverted.rs  mod.rs  numeric.rs
crates/mini-search/tests/: engine.rs  filter.rs  index.rs  numkey.rs  persist.rs  query.rs  score.rs  tokenizer.rs  types.rs
crates/mini-serve/: Cargo.toml  README.md
crates/mini-serve/examples/: graceful_shutdown.rs
crates/mini-serve/src/: app.rs  body.rs  error.rs  extract.rs  handler.rs  header.rs  lib.rs  logging.rs  middleware.rs  response.rs  router.rs  state.rs  tls.rs
crates/mini-serve/tests/: body.rs  concurrency.rs  cors.rs  err.rs  error_handler.rs  errors.rs  extract.rs  groups.rs  header.rs  limits.rs  log.rs  middleware.rs  query.rs  response.rs  routing.rs  shutdown.rs  state.rs  tls.rs
crates/mini-static/: Cargo.toml  README.md
crates/mini-static/examples/: graceful_shutdown.rs
crates/mini-static/src/: error.rs  handler.rs  lib.rs  live.rs  mime.rs  resolve.rs  server.rs  transform.rs
crates/mini-static/tests/: caching.rs  err.rs  handle_request.rs  handler.rs  live.rs  log.rs  os_shutdown.rs  range.rs  serve.rs  shutdown.rs  streaming.rs  transform.rs  traversal.rs
crates/mini-unified/: Cargo.toml
crates/mini-unified/src/: lib.rs
crates/mini-unified/tests/: integration.rs
