[package]
name = "demo"
version = "0.2.0"
edition.workspace = true

[dependencies]
mini-serve = { path = "../mini-serve" }
hyper = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "signal"] }
mini-log = { path = "../mini-log" }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
