[package]
name = "demo"
version = "0.3.0"
edition.workspace = true

[dependencies]
mini-serve = { path = "../mini-serve", features = ["err", "log"] }
mini-log = { path = "../mini-log", features = ["err"] }
mini-err = { path = "../mini-err" }
hyper = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
