[package]
name = "mini-search"
version = "0.11.0"
edition.workspace = true

[features]
default = []
persist = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
