[package]
name = "mini-search"
version = "0.14.0"
edition.workspace = true

[features]
default = []
persist = []
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:web-sys"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[dev-dependencies]
tempfile = "3"
