[package]
name = "mini-serve"
version = "0.2.1"
edition = "2021"

[dependencies]
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-auto"] }
http-body-util = "0.1"
http-body = "1"
tokio = { version = "1", features = ["net", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
