[package]
name = "mini-serve"
version = "0.3.20"
edition.workspace = true

[features]
default = []
err = ["dep:mini-err"]
log = ["dep:mini-log"]

[dependencies]
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-auto"] }
http-body-util = "0.1"
http-body = "1"
tokio = { version = "1", features = ["net", "rt", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
futures-core = { version = "0.3", default-features = false, features = ["std"] }
mini-err = { path = "../mini-err", version = "0.3", optional = true }
mini-log = { path = "../mini-log", version = "0.3", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
mini-err = { path = "../mini-err", version = "0.3" }
mini-log = { path = "../mini-log", version = "0.3" }
