[package]
name = "mini-static"
version = "0.2.1"
edition.workspace = true

[dependencies]
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-auto"] }
http-body-util = "0.1"
http-body = "1"
tokio = { version = "1", features = ["net", "rt", "macros", "fs"] }
mime_guess = "2"
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
