[package]
name = "mini-unified"
version = "0.2.1"
edition.workspace = true

[dependencies]
mini-serve = { path = "../mini-serve" }
mini-static = { path = "../mini-static" }
hyper = "1"
futures-core = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["sync"] }
serde_json = "1"
http-body = "1"
http-body-util = "0.1"

[dev-dependencies]
hyper = "1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
